Added delete function to recipe
